# LLWP

./: .gitignore  LICENSE  LLWP.bat  LLWP.py  LLWP3.0.py  README.md  clean.bat  contact.html  distribute.bat  docs.html  download.html  imprint.html  index.html  manifest.json  pyproject.toml  readme.md  sitemap.xml  sw.js  videos.html
LLWP/: LICENSE  MANIFEST.in  README.md  pyproject.toml
LLWP/llwp/: LLWP.py  __init__.py
llwp/: LLWP.py
resources/: docs.css  style.css
resources/download/: LLWP.pyw
resources/download/InstallScripts/: ubuntu_install.sh  windows_install.bat
resources/download/SampleData/: Sample.cat
resources/fonts/: nunito-sans-v6-latin-200italic.eot  nunito-sans-v6-latin-600italic.eot  nunito-sans-v6-latin-700italic.eot  nunito-sans-v6-latin-800italic.eot  nunito-sans-v6-latin-900italic.eot
